--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -19,6 +19,9 @@
   height: 350px;
   .qr{
     position: absolute;
+    width: 1200px;
+    left: 50%;
+    margin-left: -600px;
     top: 0;
     height: 100%;
     background: url(../../../assets/images/qr-download.png) no-repeat center right;
