--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -1,13 +1,13 @@
 .banner-01{
-	background: #2f54b4 url(../../../assets/images/banner.jpg) no-repeat center;
+	background: #2f54b4 url(/assets/images/banner.jpg) no-repeat center;
 }
 
 .banner-02{
-	background: #2f54b4 url(../../../assets/images/banner-02.jpg) no-repeat center;
+	background: #2f54b4 url(/assets/images/banner-02.jpg) no-repeat center;
 }
 
 .banner-03{
-	background: #2f54b4 url(../../../assets/images/banner-03.jpg) no-repeat center;
+	background: #2f54b4 url(/assets/images/banner-03.jpg) no-repeat center;
 }
 
 .carousel-control, .carousel-indicators{
@@ -24,7 +24,7 @@
     margin-left: -600px;
     top: 0;
     height: 100%;
-    background: url(../../../assets/images/qr-download.png) no-repeat center right;
+    background: url(/assets/images/qr-download.png) no-repeat center right;
   }
 }
 
@@ -48,20 +48,20 @@
 
 .yield{
   height: 521px;
-  background: url(../../../assets/images/yield-compare.png) no-repeat center;
+  background: url(/assets/images/yield-compare.png) no-repeat center;
 }
 
 .security{
   height: 459px;
-  background: url(../../../assets/images/security.png) no-repeat center;
+  background: url(/assets/images/security.png) no-repeat center;
 }
 
 .cooperation{
   height: 340px;
-  background: url(../../../assets/images/cooperation.png) no-repeat center;
+  background: url(/assets/images/cooperation.png) no-repeat center;
 }
 
 .download{
   height: 354px;
-  background: #f46867 url(../../../assets/images/qr-2.png) no-repeat center;
+  background: #f46867 url(/assets/images/qr-2.png) no-repeat center;
 }
