--- a/src/app/advantage/advantage.scss
+++ b/src/app/advantage/advantage.scss
@@ -37,20 +37,20 @@
 	}
 	.tech-sec{
 		height: 560px;
-		background: url(../../../assets/images/advantage/ad-05.png) no-repeat center;
+		background: url(/assets/images/advantage/ad-05.png) no-repeat center;
 	}
 	.img-01{
-		background: url(../../../assets/images/advantage/ad-01.png) no-repeat center;
+		background: url(/assets/images/advantage/ad-01.png) no-repeat center;
 	}
 	.img-02{
-		background: url(../../../assets/images/advantage/ad-02.png) no-repeat center;
+		background: url(/assets/images/advantage/ad-02.png) no-repeat center;
 	}
 	.img-03{
 		height: 260px;
-		background: url(../../../assets/images/advantage/ad-03.png) no-repeat center;
+		background: url(/assets/images/advantage/ad-03.png) no-repeat center;
 	}
 	.img-04{
 		height: 240px;
-		background: url(../../../assets/images/advantage/ad-04.png) no-repeat center;
+		background: url(/assets/images/advantage/ad-04.png) no-repeat center;
 	}
 }
