--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -3,11 +3,15 @@
 }
 
 .banner-02{
-	background: #2f54b4 url(/assets/images/banner-02.jpg) no-repeat center;
+	background: url(/assets/images/banner-02.jpg) no-repeat center;
 }
 
 .banner-03{
-	background: #2f54b4 url(/assets/images/banner-03.jpg) no-repeat center;
+	background: url(/assets/images/banner-03.jpg) no-repeat center;
+}
+
+.banner-04{
+	background: url(/assets/images/banner-04.jpg) no-repeat center;
 }
 
 .carousel-control, .carousel-indicators{
