update company info

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -106,7 +106,8 @@ body>footer{
   }
   .copyright{
     border-top: dashed 1px #ddd;
-    line-height: 100px;
+    line-height: 2;
+    padding: 30px 0;
     font-size: 14px;
   }
 }
