--- a/src/app/about/about.contact.html
+++ b/src/app/about/about.contact.html
@@ -1,7 +1,7 @@
-<img src="assets/images/about/04.jpg" width="100%" alt="">
+<!-- <img src="assets/images/about/04.jpg" width="100%" alt=""> -->
 
 <section class="desc">
-	<div>公司地址：北京市海淀区中关村SOHO15层</div>
+	<div>公司地址：上海市徐汇区肇嘉浜路1033号徐家汇国际大厦20层</div>
 	<div>客服热线：400—064—6668	(工作日 9:00-21:00	节假日 9:00-16:00)</div>
 	<div>电子邮件：service@csyeye.com</div>
 	<div>官方微信订阅号</div>
