--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -11,7 +11,7 @@
 
 <div class="container what">
   <h1 class="text-center">什么是财神爷爷？</h1>
-  <p> 财神爷爷是麦子金服移动金融集团为广大投资用户创建的一个高收益、易存取、高保障的移动互联网投资理财产品，致力于为广大用户提供具有高效快捷安全的移动理财服务。财神爷爷是麦子金服移动金融集团为广大投资用户创建的一个高收益、易存取、高保障的移动互联网投资理财产品，致力于为广大用户提供具有高效快捷安全的移动理财服务。</p>
+  <p> 财神爷爷是麦子金服移动金融集团为广大投资用户创建的一个高收益、易存取、高保障的移动互联网投资理财产品，致力于为广大用户提供具有高效快捷安全的移动理财服务。</p>
   <p>
     财神爷爷的核心是一款可以随时存取的高收益投资理财产品，提供固定8.88%的活期年化收益率，是目前活期利率收益最高的理财产品。财神爷爷立志为广大投资用户创造最大的价值，更高的收益，贴心的服务。
   </p>
