--- a/src/app/advantage/advantage.html
+++ b/src/app/advantage/advantage.html
@@ -3,8 +3,8 @@
 		<div class="row">
 			<div class="col-xs-6 columns text-center img-01"></div>
 			<div class="col-xs-6 columns">
-				<div class="title green">联动(银联+移动)三方托管<br>平台⽆法接触投资者的理财基⾦</div>
-				<div class="desc">联动优势科技有限公司由中国移动与中国银联于2003年8月联合发起成立，致力于为企业和消费者提供创新、绿色、安全、高效的金融及电子商务产品和服务，是目前国内领先的跨综合支付服务、智能金融信息服务、移动化的本地多应用服务三大领域的移动金融及移动电子商务产业链服务提供商。</div>
+				<div class="title green">快钱第三方支付平台资金托管<br>确保财神爷爷平台无法碰触用户投资资金</div>
+				<div class="desc">快钱公司是国内领先的创新型互联网金融机构。基于十多年在电子支付领域的积累为消费者和企业提供丰富的支付工具。快钱产品和服务的高度安全性以及严格的风险控制体系深受业内专家和众多企业的好评。快钱整套安全体系获得了美国MasterCard网站信息安全认证、美国Visa持卡人信息安全认证和美国AmericanExpress运通的DSS认证，拥有国际最高标准PCI(Payment Card Industry)信息安全认证和ISO/IEC 27001认证。</div>
 			</div>
 		</div>
 
@@ -21,13 +21,13 @@
 			<div class="col-xs-6 columns text-center img-03">
 			</div>
 			<div class="col-xs-6 columns">
-				<div class="title no-desc">麦子金服提供<br><strong>一亿</strong>人民币连带责任本息担保</div>
+				<div class="title no-desc">麦子金服提供本息担保</div>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-xs-6 columns">
-				<div class="title no-desc">名校贷本科以上的大学生消费助学贷款<br>坏账率仅<strong>0.048%</strong>，秒杀全行业</div>
+				<div class="title no-desc">名校贷大学生消费助学贷款<br>坏账率仅<strong>0.048%</strong>，秒杀全行业</div>
 			</div>
 			<div class="col-xs-6 columns text-center img-04">
 			</div>
