--- a/src/app/help/help.html
+++ b/src/app/help/help.html
@@ -7,14 +7,14 @@
 			<accordion>
 				<accordion-group heading="关于我们" is-open="true">
 					<p>财神爷爷，是麦子金服移动金融集团为广大普通投资用户创建的一个安全、灵活、高收益的互联网理财平台，通过“互联网+”以及移动互联网致力于为用户实现金融平权，普惠金融之梦。</p>
-					<p>财神爷爷提供至少高达8.88%的活期年化利率，按日计息，随取随存，秒杀余某宝等活期理财产品；财神爷爷所有投资资金由银联三方支付公司提供资金独立安全托管，阳光财险公司100亿保函承保；债权全部来自麦子金服移动金融集团旗下的名校贷优质、安全、小额的本科以上大学生助学贷款，并由全球排名第一会计事务所德勤严格专业的债权质量和财务审计。</p>
+					<p>财神爷爷提供至少高达8.88%的活期年化利率，按日计息，随取随存，秒杀余某宝等活期理财产品；财神爷爷所有投资资金由银联三方支付公司提供资金独立安全托管，阳光财险公司100亿保函承保；债权全部来自麦子金服移动金融集团旗下的名校贷、大房东等有本息担保的优质债权，并由全球排名第一会计事务所德勤严格专业的债权质量和财务审计。</p>
 				</accordion-group>
 
 				<accordion-group heading="财神爷爷的特点及优势">
 					<ol>
-						<li>随存随取，灵活便捷：1元起投，当日计息，随时提现，平均到账时间3小时左右。</li>
-						<li>活期高收益：活期年化利率8.88%，是余额宝的3倍，银行活期的25倍，按日计息。</li>
-						<li>本息保障：银联三方支付进行账户监管，账户资金安全由阳光财险集团承保，Verisign提供权威认证，麦子金服提供1亿元人民币连带责任本息担保。</li>
+						<li>随存随取，灵活便捷：1元起投，当日计息，随时提现，平均到账时间2小时左右。</li>
+						<li>活期高收益：活期年化收益率8.88%，是余额宝的3倍，银行活期的25倍。</li>
+						<li>本息保障：快钱三方支付进行账户监管，账户资金安全由阳光财险集团承保，Verisign提供权威认证，麦子金服提供本息担保。</li>
 					</ol>
 				</accordion-group>
 
@@ -92,7 +92,7 @@
 					</div>
 					<div class="row">
 						<div class="col-xs-offset-2 col-xs-2">招商银行</div>
-						<div class="col-xs-2">20万</div>
+						<div class="col-xs-2">5万</div>
 						<div class="col-xs-2">20万</div>
 					</div>
 					<div class="row">
@@ -118,7 +118,7 @@
 
 				<accordion-group heading="财神爷爷购买、提现有手续费吗？">
 					当前您的每一笔购买、提现均不收手续费；后期若有收取，我们会提前公告通知您。
-				</accordion-group>	
+				</accordion-group>
 
 				<accordion-group heading="在财神爷爷提现，资金多久能到账？">
 					我们最快24小时以内，最迟48小时内，目前平均到账时间2小时左右。
