--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -10,10 +10,10 @@
 
 
 <div class="container what">
-  <h1 class="text-center">什么是财神爷爷？</h1>
-  <p> 财神爷爷是麦子金服移动金融集团为广大投资用户创建的一个高收益、易存取、高保障的移动互联网投资理财产品，致力于为广大用户提供具有高效快捷安全的移动理财服务。</p>
+  <h1 class="text-center">财神爷爷是谁？</h1>
+  <p> 财神爷爷是麦子金服移动金融集团为广大投资用户创建的一个高收益、低风险、易存取的移动互联网投资理财平台，致力于为用户提供高效、快捷、安全的互联网移动理财服务。借助财神爷爷App，用户可随时随地存取资金，预计年化活期收益率高达8.88%，是目前活期收益率最高的互联网理财产品，接近甚至超过市场上主流定期理财产品。</p>
   <p>
-    财神爷爷的核心是一款可以随时存取的高收益投资理财产品，提供固定8.88%的活期年化收益率，是目前活期利率收益最高的理财产品。财神爷爷立志为广大投资用户创造最大的价值，更高的收益，贴心的服务。
+    财神爷爷平台上可购买的债权，主要来源于麦子金服旗下的名校贷、大房东等资产端的优质贷款债权，由全球排名领先的德勤会计事务所进行严格专业的债权审计，用户在财神爷爷的每一笔投资均由快钱第三方支付平台进行专业资金托管，财神爷爷平台本身并不会碰触到用户的投资资金。阳光财产保险公司还对每笔交易承担保险责任，在投资、提现各环节全面保险投资者的资金安全。
   </p>
 </div>
 
