--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -14,6 +14,10 @@
 	background: url(/assets/images/banner-04.jpg) no-repeat center;
 }
 
+.banner-05{
+  background: url(/assets/images/banner-05.jpg) no-repeat center;
+}
+
 .carousel-control, .carousel-indicators{
 	display: none;
 }
