--- a/src/app/about/about.html
+++ b/src/app/about/about.html
@@ -3,7 +3,7 @@
 		<aside class="side-menu">
 			<ul class="list-unstyled text-center">
 				<li ng-class="{active: state==='about.company'}"><a ui-sref="about.company">公司介绍</a></li>
-				<li ng-class="{active: state==='about.team'}"><a ui-sref="about.team">团队介绍</a></li>
+				<!-- <li ng-class="{active: state==='about.team'}"><a ui-sref="about.team">团队介绍</a></li> -->
 				<li ng-class="{active: state==='about.dynamic'}"><a ui-sref="about.dynamic">公司动态</a></li>
 				<li ng-class="{active: state==='about.join'}"><a ui-sref="about.join">加入我们</a></li>
 				<li ng-class="{active: state==='about.contact'}"><a ui-sref="about.contact">联系我们</a></li>
