update advantage content

--- a/src/app/advantage/advantage.html
+++ b/src/app/advantage/advantage.html
@@ -10,7 +10,7 @@
 
 		<div class="row">
 			<div class="col-xs-6 columns">
-				<div class="title">阳光财险 <br> 全⾯保障交易资金安全</div>
+				<div class="title"><strong>阳光财险</strong> <br> 为平台客户充值、提现、申购、赎回等过程按保险合同的约定提供资金交易安全保障</div>
 				<div class="desc">阳光保险集团股份有限公司是中国500强企业、中国服务业100强企业，集团注册资本金67.1059亿元人民币，目前拥有阳光财产保险股份有限公司、阳光人寿保险股份有限公司、阳光资产管理股份有限公司等多家专业子公司。</div>
 			</div>
 			<div class="col-xs-6 columns text-center img-02">
